argocd/media/tautulli-k8s/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tautulli-k8s-deployment
  labels:
    app: tautulli-k8s
spec:
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: tautulli-k8s
  template:
    metadata:
      labels:
        app: tautulli-k8s
    spec:
      containers:
      - name: tautulli-k8s
        image: nginx:latest
        ports:
        - containerPort: 8181
        volumeMounts:
        - name: config
          mountPath: "/config"
          readOnly: false
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: tautulli-k8s-pvc
      dnsConfig:
        nameservers:
          - 8.8.8.8
        searches:
          - api.github.com
          - api.themoviedb.org
          - plex.tv
        options:
          - name: ndots
            value: "1"
