argocd/media/tautulli-k8s/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tautulli-k8s-service
spec:
  selector:
    app: tautulli-k8s
  ports:
    - protocol: TCP
      port: 8181
      targetPort: 8181
