argocd/media/tautulli-k8s/IngressRoute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: tautulli-k8s-route
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`tautulli.homelab.bowmans.site`)
      kind: Rule
      services:
      - name: tautulli-k8s-service
        port: 8181
  tls:
    secretName: tautulli-k8s-certificate
